# aia-project

./: .gitignore  CMakeLists.txt  README.md
myproject/: CMakeLists.txt  functions.cpp  functions.h  main.cpp
results/preprocessing/: 20586986_6c613a14b80a8591_MG_L_ML_ANON_preprocessed.tif  20587080_b6a4f750c6df4f90_MG_R_ML_ANON_preprocessed.tif  20587200_fd746d25eb40b3dc_MG_R_ML_ANON_preprocessed.tif  20587226_fd746d25eb40b3dc_MG_L_ML_ANON_preprocessed.tif  20587346_e634830794f5c1bd_MG_R_ML_ANON_preprocessed.tif  20587372_e634830794f5c1bd_MG_L_ML_ANON_preprocessed.tif  20587492_d571b5880ad2a016_MG_R_ML_ANON_preprocessed.tif  20587518_d571b5880ad2a016_MG_L_ML_ANON_preprocessed.tif  20587784_81cd83d2f4d78528_MG_R_ML_ANON_preprocessed.tif  20587810_81cd83d2f4d78528_MG_L_ML_ANON_preprocessed.tif  20587928_8dbbd4e51f549ff0_MG_R_ML_ANON_preprocessed.tif  20588046_024ee3569b2605dc_MG_R_ML_ANON_preprocessed.tif  20588072_024ee3569b2605dc_MG_L_ML_ANON_preprocessed.tif  20588138_8d0b9620c53c0268_MG_R_ML_ANON_preprocessed.tif  20588216_8d0b9620c53c0268_MG_L_ML_ANON_preprocessed.tif  20588308_493155e17143edef_MG_L_ML_ANON_preprocessed.tif  20588510_bf1a6aaadb05e3df_MG_R_ML_ANON_preprocessed.tif  20588536_bf1a6aaadb05e3df_MG_L_ML_ANON_preprocessed.tif  20588654_036aff49b8ac84f0_MG_R_ML_ANON_preprocessed.tif  20588680_036aff49b8ac84f0_MG_L_ML_ANON_preprocessed.tif  22579730_bbd6a3a35438c11b_MG_R_ML_ANON_preprocessed.tif  22579754_bbd6a3a35438c11b_MG_L_ML_ANON_preprocessed.tif  22579893_301f1776aebbf5d2_MG_R_ML_ANON_preprocessed.tif  (+151 more)
(+414 files in other folders)
